--- a/src/components/ReQestMenu/Request_List.astro
+++ b/src/components/ReQestMenu/Request_List.astro
@@ -63,7 +63,7 @@
         border: dotted 2px black;
     }
 </style>
-<script lang="JS">
+<script lang="js">
     let intervalId = setInterval(updateTimeAndName, 1000);
 
     function updateTimeAndName() {
