--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import { API_URL } from 'astro:env/client';
 ---
 
 <Layout title="Login">
-    <div id="Status"><!-- Uncomment for place holder: Error 404: Lorem Ipsum --> aa</div>
+    <div id="Status"><!-- Uncomment for place holder: Error 404: Lorem Ipsum --></div>
     <a id="hiddenRedirectionBecauseAstroOnlyDoesThisNow" href="/Dashboard/Home" style="display: none;">this is supposed to be hidden</a>
     <span>
         <div id="Login" class="sanchez-regular">
@@ -23,8 +23,8 @@ import { API_URL } from 'astro:env/client';
                     <label for="password"></label>
                     <input placeholder="Parlier1" type="password" id="password" name="password"  class="input-text-large" autocomplete="current-password">
                     <div class="password-checkbox">
-                        <img src="https://raw.githubusercontent.com/Parlier-NJROTC/Assets/refs/heads/main/Other/eye-svgrepo-com.svg" alt="Show Password" class="hide-icon" style="width: 20px;height: 20px;cursor: pointer;">
-                        <img src="https://raw.githubusercontent.com/Parlier-NJROTC/Assets/refs/heads/main/Other/eye-hide-svgrepo-com.svg" alt="Hide Password" class="show-icon" style="width: 20px;height: 20px;cursor: pointer;display: none;">
+                        <img src="https://raw.githubusercontent.com/Parlier-NJROTC/Assets/refs/heads/main/Other/eye-svgrepo-com.svg" alt="Show Password" class="hide-icon" style="width: 20px;height: 20px;cursor: pointer;display: none;">
+                        <img src="https://raw.githubusercontent.com/Parlier-NJROTC/Assets/refs/heads/main/Other/eye-hide-svgrepo-com.svg" alt="Hide Password" class="show-icon" style="width: 20px;height: 20px;cursor: pointer;">
                     </div>
                 </div>
                 <div class="input-group" style="padding-top: 50px;">
