Css fixes with Request + New Ribbons

--- a/src/components/Pages/Ribbon.astro
+++ b/src/components/Pages/Ribbon.astro
@@ -12,6 +12,7 @@ import File from '../ReQestMenu/file_upload.astro'
       <div class="box">
         <File></File>
         <button id="Buttonn">Open Ribbon Selector</button>
+        <button id="Submit">Sumite</button>
         </div>
       </div>
     </div>
@@ -66,6 +67,13 @@ import File from '../ReQestMenu/file_upload.astro'
       height: 50px;
       z-index: 90;
       bottom: 150px;
+    }
+    #Submit{
+      position: absolute;
+      bottom: 40px;
+
+      width: 20vw;
+      height: 5vw;
     }
     @keyframes fadeIn {
       0% {
