--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import { API_URL } from 'astro:env/client';
 ---
 
 <Layout title="Login">
-    <div id="Status"><!-- Uncomment for place holder: Error 404: Lorem Ipsum --></div>
+    <div id="Status"></div>
     <a id="hiddenRedirectionBecauseAstroOnlyDoesThisNow" href="/Dashboard/Home" style="display: none;">this is supposed to be hidden</a>
     <span>
         <div id="Login" class="sanchez-regular">
