--- a/src/pages/Request/index.astro
+++ b/src/pages/Request/index.astro
@@ -3,7 +3,7 @@ import Dashboard from "../../layouts/Dashboard.astro";
 import Home from '../../components/Pages/Ribbon.astro';
 ---
 
-<Dashboard title='Request' class="noPrint">
+<Dashboard title='Request'>
 <Home class="noPrint"></Home>
 </Dashboard >
 
@@ -13,10 +13,6 @@ import Home from '../../components/Pages/Ribbon.astro';
     Home{
         z-index: 999;
     }
-    @media print {
-    .noPrint{
-        display:none;
-    }
-    }
+
 </style>
 </html>
