--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -191,6 +191,9 @@ import { API_URL } from 'astro:env/client';
             display: grid;
             grid-template-columns: 1fr;
             gap: 10px;
+
+            min-width: 226.5px;
+            min-height: 253.5;
         }
 
         .input-group {
@@ -249,7 +252,10 @@ import { API_URL } from 'astro:env/client';
         font-weight: 400;
         font-style: italic;
         }
-
+        .password-checkbox{
+            min-height: 24px;
+            min-width: 254px;
+        }
     </style>
 
 <!--
