Event Dropdown + Dark Mode Fixes + Cleaned out the Clock

--- a/src/components/SmalCompents/Clock.astro
+++ b/src/components/SmalCompents/Clock.astro
@@ -21,7 +21,7 @@
     }
   
   .date {
-        top: 40%; 
+        top: 39%; 
     }
   .glow-morning,.glow-midday,.glow-sunset,.glow-night {
         animation-duration: 2s;
@@ -41,7 +41,7 @@
         var months = ["January", "February", "March", "April", "May", "June",
                       "July", "August", "September", "October", "November", "December"];
   
-        var formattedDate = `${months[monthIndex]} ${day}, ${year}`;
+        var formattedDate = `${months[monthIndex]} ${day} ${year}`;
   
         document.getElementById("MyDateDisplay").innerText = formattedDate;
   
