--- a/src/layouts/Dashboard.astro
+++ b/src/layouts/Dashboard.astro
@@ -194,6 +194,7 @@ import { API_URL } from 'astro:env/client';
         --nav-bg-color:rgb(255, 255, 255);
         --nav-txt-color:rgb(0, 0, 0);
         --img-invert:100%;
+        --dropdown-textcolor:#bead91;
       }
       body.dark-mode img{
         filter: invert(100%);
