--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,8 +23,8 @@ import { API_URL } from 'astro:env/client';
                     <label for="password"></label>
                     <input placeholder="Parlier1" type="password" id="password" name="password"  class="input-text-large" autocomplete="current-password">
                     <div class="password-checkbox">
-                        <img src="https://raw.githubusercontent.com/Parlier-NJROTC/Assets/refs/heads/main/Other/eye-svgrepo-com.svg" alt="Show Password" class="hide-icon" style="width: 20px;height: 20px;cursor: pointer;display: none;">
-                        <img src="https://raw.githubusercontent.com/Parlier-NJROTC/Assets/refs/heads/main/Other/eye-hide-svgrepo-com.svg" alt="Hide Password" class="show-icon" style="width: 20px;height: 20px;cursor: pointer;">
+                        <img src="https://raw.githubusercontent.com/Parlier-NJROTC/Assets/refs/heads/main/Other/Show.svg" alt="Show Password" class="hide-icon" style="width: 20px;height: 20px;cursor: pointer;display: none;">
+                        <img src="https://raw.githubusercontent.com/Parlier-NJROTC/Assets/refs/heads/main/Other/Hidden.svg" alt="Hide Password" class="show-icon" style="width: 20px;height: 20px;cursor: pointer;">
                     </div>
                 </div>
                 <div class="input-group" style="padding-top: 50px;">
@@ -255,6 +255,17 @@ import { API_URL } from 'astro:env/client';
         .password-checkbox{
             min-height: 24px;
             min-width: 254px;
+
+            filter: invert(100%);
+
+            transition: 150ms ease-in-out;
+        }
+        .password-checkbox:active img{
+            transition: 50ms ease-in-out;
+        }
+        .password-checkbox:active img{
+            opacity: 0.7;
+            transform: scale(0.9);
         }
     </style>
 
