--- a/src/components/Pages/Ribbon.astro
+++ b/src/components/Pages/Ribbon.astro
@@ -11,7 +11,7 @@ import File from '../ReQestMenu/file_upload.astro'
       <List></List>
       <div class="box">
         <File></File>
-        <button id="Buttonn">Open Ribbon Selector</button>
+        <button id="Buttonn">Open Items Selector</button>
         <button id="Submit">Sumite</button>
         </div>
       </div>
@@ -21,8 +21,11 @@ import File from '../ReQestMenu/file_upload.astro'
 
     document.getElementById('Buttonn').addEventListener('mousedown', function() {
       const astroComponent = document.querySelector('.astro-component');
+      const o = document.querySelector('.Setimg');
       astroComponent.style.display = 'block';
       astroComponent.style.opacity = '1';
+      o.style.display = 'none';
+      o.style.opacity = '0';
     });
   </script>
 
@@ -67,6 +70,8 @@ import File from '../ReQestMenu/file_upload.astro'
       height: 50px;
       z-index: 90;
       bottom: 150px;
+
+      font-family: 'Sanchez';
     }
     #Submit{
       position: absolute;
@@ -74,6 +79,8 @@ import File from '../ReQestMenu/file_upload.astro'
 
       width: 20vw;
       height: 5vw;
+
+      font-family: 'Sanchez';
     }
     @keyframes fadeIn {
       0% {
