--- a/src/components/menu/Link.astro
+++ b/src/components/menu/Link.astro
@@ -49,6 +49,7 @@ const { title ,link = title} = Astro.props
         height: 50px;
         text-decoration: none;
         transition: ease-in-out 150ms;
+        width: 275px;
 
         
 
@@ -56,13 +57,20 @@ const { title ,link = title} = Astro.props
         padding-right: 25px;
         font-size: 24px;
         font-family: 'Sanchez';
+        padding-top: 10px;
+        padding-bottom: 10px;
+
+        border-radius: 5px;
         
 
         color: var(--nav-txt-color);
     }
     span a:hover{
-        border-radius: 2px;
-        border-right: 4px solid rgb(255, 255, 255);
-        border-left: 5px solid rgb(255, 255, 255);
+        background-color: var(--nav-bg-color);
+
+        box-shadow: -15px 0px blue;
+        padding-right: 20px;
+
+        translate: 5% 0%;
     }
 </style>
