--- a/src/layouts/Dashboard.astro
+++ b/src/layouts/Dashboard.astro
@@ -1,6 +1,7 @@
 ---
 import Link from "../components/menu/Link.astro";
 import Fvfer from '../components/SmalCompents/Line.astro';
+import Avdnesseting from '../components/SmalCompents/advindssetting.astro'
 import "./Dashboard.css";
 
 interface Props {
@@ -60,7 +61,11 @@ import { API_URL } from 'astro:env/client';
         <Link title="Home">Home</Link>
         <hr>
         <Link title="Request">Request</Link>
+        <svg id="CKSV" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#FFFFFF"><path d="m370-80-16-128q-13-5-24.5-12T307-235l-119 50L78-375l103-78q-1-7-1-13.5v-27q0-6.5 1-13.5L78-585l110-190 119 50q11-8 23-15t24-12l16-128h220l16 128q13 5 24.5 12t22.5 15l119-50 110 190-103 78q1 7 1 13.5v27q0 6.5-2 13.5l103 78-110 190-118-50q-11 8-23 15t-24 12L590-80H370Zm70-80h79l14-106q31-8 57.5-23.5T639-327l99 41 39-68-86-65q5-14 7-29.5t2-31.5q0-16-2-31.5t-7-29.5l86-65-39-68-99 42q-22-23-48.5-38.5T533-694l-13-106h-79l-14 106q-31 8-57.5 23.5T321-633l-99-41-39 68 86 64q-5 15-7 30t-2 32q0 16 2 31t7 30l-86 65 39 68 99-42q22 23 48.5 38.5T427-266l13 106Zm42-180q58 0 99-41t41-99q0-58-41-99t-99-41q-59 0-99.5 41T342-480q0 58 40.5 99t99.5 41Zm-2-140Z"/></svg>
     </nav>
+    <div class="Setimg">
+        <Avdnesseting/>
+    </div>
     <script lang="js">
         console.log("mannn3")
     </script>
@@ -124,8 +129,41 @@ import { API_URL } from 'astro:env/client';
         })
 
     </script>
+    <script lang="js">
+    document.getElementById('CKSV').addEventListener('click', function() {
+    const astroComponent = document.querySelector('.Setimg');
+    const o = document.querySelector('.astro-component');
+    if (astroComponent && astroComponent.style.display === 'none') {
+        astroComponent.style.display = 'block';
+        astroComponent.style.opacity = '1';
+        o.style.display = 'none';
+        o.style.opacity = '0';
+    } else {
+        astroComponent.style.display = 'none';
+        astroComponent.style.opacity = '0';
+    }
+});
+
+    </script>
+
 </body>
 <style>
+    .Setimg{
+        position: absolute;
+        left: 10%;
+        margin-top: 90px;
+
+        background: white;
+        z-index: 100;
+        width: 80%;
+        height: 80%;
+
+        border: double 3px black;
+        border-radius: 5px;
+
+        overflow-y: scroll;
+        display: none;
+    }
     hr{
         width: 10px;
         margin-right: 156px;
@@ -204,7 +242,7 @@ import { API_URL } from 'astro:env/client';
 </style>
 <script lang="js">
     document.addEventListener('DOMContentLoaded', function() {
-        const userInfoDropdownToggle = document.getElementById('User-Info');
+        const userInfoDropdownToggle = document.getElementById('Dashboard-Header');
         const dropdownContent = document.querySelector('.dropdown-content');
     
         userInfoDropdownToggle.addEventListener('click', function(event) {
@@ -241,22 +279,22 @@ import { API_URL } from 'astro:env/client';
             toggleDarkMode();
         });
         document.addEventListener('DOMContentLoaded', function() {
-    const dashboardHeader = document.getElementById('Dashboard-Header');
-    const Userinfo = document.getElementById('User-Info');
-    const tooltipContainer = document.getElementById('tooltip-container');
-    
-    if (!localStorage.getItem('dashboardClicked')) {
-        
-        dashboardHeader.addEventListener('click', function() {
-            localStorage.setItem('dashboardClicked', 'true');
-            tooltipContainer.style.display = 'none';
-            Userinfo.style.border = 'none';
+            const dashboardHeader = document.getElementById('Dashboard-Header','tooltip-container');
+            const Userinfo = document.getElementById('User-Info');
+            const tooltipContainer = document.getElementById('tooltip-container');
+            
+            if (!localStorage.getItem('dashboardClicked')) {
+                
+                dashboardHeader.addEventListener('click', function() {
+                    localStorage.setItem('dashboardClicked', 'true');
+                    tooltipContainer.style.display = 'none';
+                    Userinfo.style.border = 'none';
+                });
+            } else {
+                tooltipContainer.style.display = 'none';
+                Userinfo.style.border = 'none';
+            }
         });
-    } else {
-        tooltipContainer.style.display = 'none';
-        Userinfo.style.border = 'none';
-    }
-});
 
     </script>
     
