--- a/src/components/menu/Link.astro
+++ b/src/components/menu/Link.astro
@@ -68,7 +68,7 @@ const { title ,link = title} = Astro.props
     span a:hover{
         background-color: var(--nav-bg-color);
 
-        box-shadow: -15px 0px blue;
+        box-shadow: -15px 0px var(--nav-box-hover);
         padding-right: 20px;
 
         translate: 5% 0%;
