--- a/src/layouts/Dashboard.css
+++ b/src/layouts/Dashboard.css
@@ -4,12 +4,14 @@
     --nav-bg-color:#0000a4;
     --nav-txt-color:white;
 
+
     --header-height:105px;
     --header-bg-color:whitesmoke;
     --header-txt-color:black;
     --header-h2-color:#808080;
 
     --main-content-color:wheat;
+    --nav-box-hover: blue;
 }
 
 
