--- a/src/components/SmalCompents/debt.astro
+++ b/src/components/SmalCompents/debt.astro
@@ -12,6 +12,12 @@
         </div>
     </div>
     <style>
+        #Debtde{
+            background: white;
+            border: solid black 5px;
+
+            background-clip:border-box;
+        }
         #debt-counter {
             font-size: 25px;
             margin-top: 50px;
