--- a/src/pages/Home/index.astro
+++ b/src/pages/Home/index.astro
@@ -92,6 +92,9 @@ import Debt from "../../components/SmalCompents/debt.astro"
   margin-right: 20px;
   margin-bottom: 20px;
 }
+.dropdown-content1{
+  overflow: hidden;
+}
 </style>
 
 <script lang="JS">
